API routes fixed.

--- a/public/index.html
+++ b/public/index.html
@@ -14,29 +14,29 @@
         <div class="jumbotron">
             <h1>API HOTELIA</h1>
             <h2>Rutas</h2>
-            <p><strong>Principal</strong><a href="/"> https://hoteliakuepa.herokuapp.com</a></p>
+            <p><strong>Principal</strong><a href="/"> https://app-hoteliakuepa.herokuapp.com/</a></p>
             <h2>Habitaciones</h2>
-            <p><strong>GET </strong><a href="/habitaciones"> https://hoteliakuepa.herokuapp.com/habitaciones</a></p>
-            <p><strong>GET </strong><a href="/habitaciones/101"> https://hoteliakuepa.herokuapp.com/habitaciones/id</a><br>
+            <p><strong>GET </strong><a href="/habitaciones"> https://app-hoteliakuepa.herokuapp.com/habitaciones</a></p>
+            <p><strong>GET </strong><a href="/habitaciones/101"> https://app-hoteliakuepa.herokuapp.com//habitaciones/id</a><br>
                 <SMall>Esta ruta obtiene una habitación a partir de su <strong>id</strong></SMall></P>
-            <p><strong>POST </strong><a href="/habitaciones"> https://hoteliakuepa.herokuapp.com/habitaciones</a></p>
-            <p><strong>PUT  </strong><a href="/habitaciones/101">https://hoteliakuepa.herokuapp.com/habitaciones/id</a><br>   
+            <p><strong>POST </strong><a href="/habitaciones"> https://app-hoteliakuepa.herokuapp.com//habitaciones</a></p>
+            <p><strong>PUT  </strong><a href="/habitaciones/101">https://app-hoteliakuepa.herokuapp.com/habitaciones/id</a><br>   
                 <SMall>Esta ruta permite modificar cualquier dato de una habitación a partir de su <strong>id</strong></SMall></P>
 
             <h2>Huepedes</h2>
-            <p><strong>GET </strong><a href="/users"> https://hoteliakuepa.herokuapp.com/users</a></p>
-            <p><strong>GET </strong><a href="/users/1234567890"> https://hoteliakuepa.herokuapp.com/users/id</a><br>
+            <p><strong>GET </strong><a href="/users"> https://app-hoteliakuepa.herokuapp.com/users</a></p>
+            <p><strong>GET </strong><a href="/users/1234567890"> https://app-hoteliakuepa.herokuapp.com/users/id</a><br>
                 <SMall>Esta ruta obtiene un usuario a partir de su <strong>id</strong></SMall></P>
-            <p><strong>POST </strong><a href="/users"> https://hoteliakuepa.herokuapp.com/users</a></p>
-            <p><strong>PUT  </strong><a href="/users/1234567890">https://hoteliakuepa.herokuapp.com/users/id</a><br>   
+            <p><strong>POST </strong><a href="/users"> https://app-hoteliakuepa.herokuapp.com/users</a></p>
+            <p><strong>PUT  </strong><a href="/users/1234567890">https://app-hoteliakuepa.herokuapp.com/users/id</a><br>   
                 <SMall>Esta ruta permite modificar cualquier dato de un huesped a partir de su <strong>id</strong></SMall></P>
                 
             <h2>Reservas</h2>
-            <p><strong>GET </strong><a href="/reservas"> https://hoteliakuepa.herokuapp.com/reservas</a></p>
-            <p><strong>GET </strong><a href="/reservas/62d0ca485d2107d3fb8595de"> https://hoteliakuepa.herokuapp.com/reservas/id</a><br>
+            <p><strong>GET </strong><a href="/reservas"> https://app-hoteliakuepa.herokuapp.com/reservas</a></p>
+            <p><strong>GET </strong><a href="/reservas/62d0ca485d2107d3fb8595de"> https://app-hoteliakuepa.herokuapp.com/reservas/id</a><br>
                 <SMall>Esta ruta obtiene una reseva a partir de su <strong>id</strong></SMall></P>
-            <p><strong>POST </strong><a href="/reservas"> https://hoteliakuepa.herokuapp.com/reservas</a></p>
-            <p><strong>PUT  </strong><a href="/reservas/62d0ca485d2107d3fb8595de">https://hoteliakuepa.herokuapp.com/resevas/id</a><br>   
+            <p><strong>POST </strong><a href="/reservas"> https://app-hoteliakuepa.herokuapp.com/reservas</a></p>
+            <p><strong>PUT  </strong><a href="/reservas/62d0ca485d2107d3fb8595de">https://app-hoteliakuepa.herokuapp.com/resevas/id</a><br>   
                 <SMall>Esta ruta permite modificar cualquier dato de una reserva a partir de su <strong>id</strong></SMall></P>
         
         </div>
